Demonstrate workspace resolution bug for test-java projects.